# tnhimss-bill

./: .gitignore  README.md  app.py  backend-service.nix  cpt.py  dictFile.txt  fhir_test.py  flake.nix  pyproject.toml  relate.project.json  requirements.txt  resource_import.py  start-python.sh  term_extraction.py  windows-start-python.sh
bill-site/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  site-dist.nix  tailwind.config.js  tsconfig.json  vite.config.ts
bill-site/src/: App.css  App.jsx  App.tsx
bill-site/src/components/: condition.tsx  organization.tsx  patient.tsx  theme-provider.jsx
data/: fhir_questions.txt  pruned-cpt.txt
data/fhir/: Brandon214_Watsica258_faac724a-a9e9-be66-fe1e-3044dc0ba8ea.json  Harland508_Price929_d8e3a701-d108-74ff-2ce3-156537276a14.json  Katie634_Feest103_ae687024-df69-5d7f-cfa7-2333b6b72279.json  Laurena366_Heidenreich818_1d3d0ba6-5475-07c2-0b40-562ad75fdf26.json  Sammie902_Mosciski958_5cd20da5-2f01-b94a-07fb-173648c58460.json  Timothy142_Bayer639_59f7a978-7c32-4d81-4879-56a8d44f4a12.json
db/: clara_commands.txt  healthquery.py  load_data.py  setup_relations.txt  setup_user.txt  steps.md
src/: app.py  healthquery.py  query.py  query_prompts.py  socket_server.py
